gropdown was added

--- a/main.html
+++ b/main.html
@@ -24,7 +24,14 @@
                         <address class="contacts">
                             <a href="tel: 88000039210" class="contacts__tel">8 (800) 00-392-10</a>
                             <div class="contacts__workhours">
-                                График работы
+                                <div class="dropdown">
+                                    <a href="#" class="dropdown__link">График работы</a>
+                                    <div class="dropdown__block">
+                                        <div class="dropdown__triangle"></div>
+                                        <span class="dropdown__row1"><strong>пн-вс: 09:00-20:00</strong></span><br>
+                                        <span class="dropdown__row2">обед: 14:00-14:30</span>
+                                    </div>
+                                </div>
                             </div>
                         </address>
                 </div>
