sprite was added

--- a/main.html
+++ b/main.html
@@ -64,8 +64,7 @@
                             <h2 class="section-title section-title--margin--s">Особенности</h2>
                             <ul class="features__list">
                                 <li class="features__item">
-                                    <div class="features__icon">
-                                        <img src="img/feature-flower.png" alt="Цветок" width="27" height="31" class="features__icon-img">
+                                    <div class="features__icon features__icon--img--flower">
                                     </div>
                                     <h3 class="features__title">Уникальность</h3>
                                     <div class="features__description">
@@ -80,8 +79,7 @@
                                     </div>
                                 </li>
                                 <li class="features__item">
-                                    <div class="features__icon">
-                                        <img src="img/feature-star.png" alt="Звезда" width="32" height="32" class="features__icon-img">
+                                    <div class="features__icon features__icon--img--star">
                                     </div>
                                     <h3 class="features__title">Премиум-класс</h3>
                                     <div class="features__description">
@@ -96,8 +94,7 @@
                                     </div>
                                 </li>
                                 <li class="features__item">
-                                    <div class="features__icon">
-                                        <img src="img/feature-palette.png" alt="Палетка" width="28" height="29" class="features__icon-img">
+                                    <div class="features__icon features__icon--img--palette">
                                     </div>
                                     <h3 class="features__title">Лакшери-стулья</h3>
                                     <div class="features__description">
@@ -209,23 +206,19 @@
                     <span class="socials__title">Наши социальные сети</span>
                     <ul class="socials__list">
                         <li class="socials__item">
-                            <a href="#" class="socials__link">
-                                <img src="img/vk.png" width="12" height="7" alt="VK" class="socials__img">
+                            <a href="#" class="socials__link socials__link--img--vk">
                             </a>
                         </li>
                         <li class="socials__item">
-                            <a href="#" class="socials__link">
-                                <img src="img/fb.png" alt="Facebook" width="6" height="13" class="socials__img">
+                            <a href="#" class="socials__link socials__link--img--fb">
                             </a>
                         </li>
                         <li class="socials__item">
-                            <a href="#" class="socials__link">
-                                <img src="img/twitter.png" alt="Twitter" width="11" height="9" class="socials__img">
+                            <a href="#" class="socials__link socials__link--img--tw">
                             </a>
                         </li>
                         <li class="socials__item">
-                            <a href="#" class="socials__link">
-                                <img src="img/mail.png" alt="Mail" width="12" height="9" class="socials__img">
+                            <a href="#" class="socials__link socials__link--img--mail">
                             </a>
                         </li>
                     </ul>
