--- a/prices.html
+++ b/prices.html
@@ -211,23 +211,19 @@
                     <span class="socials__title">Наши социальные сети</span>
                     <ul class="socials__list">
                         <li class="socials__item">
-                            <a href="#" class="socials__link">
-                                <img src="img/vk.png" width="12" height="7" alt="VK" class="socials__img">
+                            <a href="#" class="socials__link socials__link--img--vk">
                             </a>
                         </li>
                         <li class="socials__item">
-                            <a href="#" class="socials__link">
-                                <img src="img/fb.png" alt="Facebook" width="6" height="13" class="socials__img">
+                            <a href="#" class="socials__link socials__link--img--fb">
                             </a>
                         </li>
                         <li class="socials__item">
-                            <a href="#" class="socials__link">
-                                <img src="img/twitter.png" alt="Twitter" width="11" height="9" class="socials__img">
+                            <a href="#" class="socials__link socials__link--img--tw">
                             </a>
                         </li>
                         <li class="socials__item">
-                            <a href="#" class="socials__link">
-                                <img src="img/mail.png" alt="Mail" width="12" height="9" class="socials__img">
+                            <a href="#" class="socials__link socials__link--img--mail">
                             </a>
                         </li>
                     </ul>
