--- a/reviews.html
+++ b/reviews.html
@@ -189,13 +189,15 @@
                                 <div class="form__radio-area">
                                     <span class="form__radio-text">Отображать фото в отзыве?</span>
 
-                                    <label class="form__radio-label">
-                                    <input class="form__radiobutton" type="radio" name="question-photo" id="radio_yes" value="yes" checked>
-                                    Да</label>
+                                    <label class="radio">
+                                    <input type="radio" name="question-photo" id="radio_yes" value="yes" checked>
+                                    <div class="radio__visible"></div><span class="radio__text">Да</span>
+                                    </label>
                                     
-                                    <label class="form__radio-label">
-                                    <input class="form__radiobutton" type="radio" name="question-photo" id='radio_no' value="no">
-                                     Нет</label>
+                                    <label class="radio">
+                                    <input type="radio" name="question-photo" id='radio_no' value="no">
+                                    <div class="radio__visible"></div><span class="radio__text">Нет</span>
+                                     </label>
                                 </div>
 
                                 <input class='btn' type="submit" value="Отправить">
