--- a/reviews.html
+++ b/reviews.html
@@ -191,12 +191,14 @@
 
                                     <label class="radio">
                                     <input type="radio" name="question-photo" id="radio_yes" value="yes" checked>
-                                    <div class="radio__visible"></div><span class="radio__text">Да</span>
+                                    <div class="radio__visible"></div>
+                                    <span class="radio__text">Да</span>
                                     </label>
                                     
                                     <label class="radio">
                                     <input type="radio" name="question-photo" id='radio_no' value="no">
-                                    <div class="radio__visible"></div><span class="radio__text">Нет</span>
+                                    <div class="radio__visible"></div>
+                                    <span class="radio__text">Нет</span>
                                      </label>
                                 </div>
 
