--- a/reviews.html
+++ b/reviews.html
@@ -189,16 +189,16 @@
                                 <div class="form__radio-area">
                                     <span class="form__radio-text">Отображать фото в отзыве?</span>
 
-                                    <label class="radio">
+                                    <label class="form__radio">
                                     <input type="radio" name="question-photo" id="radio_yes" value="yes" checked>
-                                    <div class="radio__visible"></div>
-                                    <span class="radio__text">Да</span>
+                                    <div class="form__radio-visible"></div>
+                                    <span class="form__radio-var">Да</span>
                                     </label>
                                     
-                                    <label class="radio">
+                                    <label class="form__radio">
                                     <input type="radio" name="question-photo" id='radio_no' value="no">
-                                    <div class="radio__visible"></div>
-                                    <span class="radio__text">Нет</span>
+                                    <div class="form__radio-visible"></div>
+                                    <span class="form__radio-var">Нет</span>
                                      </label>
                                 </div>
 
