--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     
     <link rel="stylesheet" href="css/main.css">
 </head>
-<body>
+<body class="body__intro">
     <div class="wrapper">
         <div class="wrapper__content">
             <div class="intro">
-                <img src="img/intro.jpg" alt="Intro" class="intro__img">
+                <div class="intro__img"></div>
                 <div class="intro__img-overlay"></div>
 
                 <div class="intro__animation">
