--- a/reviews.html
+++ b/reviews.html
@@ -39,7 +39,48 @@
 
             <div class="container container--flex">
                 <aside class="sidebar">
-                    <nav class="nav">
+                    <section class="discount">
+                        <p class="discount__text">
+                            Для наших новых клиентов мы предлагаем <strong>скидку 50%</strong> на первый день! Приходите, чтобы лично оценить преимущества коворкинга «Воркадиум»!
+                        </p>
+                    </section>
+
+                    <div class="socials">
+                        <span class="socials__title">Наши социальные сети</span>
+                        <ul class="socials__list">
+                            <li class="socials__item">
+                                <a href="#" class="socials__link socials__link--img--vk">
+                                </a>
+                            </li>
+                            <li class="socials__item">
+                                <a href="#" class="socials__link socials__link--img--fb">
+                                </a>
+                            </li>
+                            <li class="socials__item">
+                                <a href="#" class="socials__link socials__link--img--tw">
+                                </a>
+                            </li>
+                            <li class="socials__item">
+                                <a href="#" class="socials__link socials__link--img--mail">
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </aside>
+
+                <div class="page-content">
+                    <!-- <nav class="breadcrumbs">
+                        <ul class="breadcrumbs__list">
+                            <li class="breadcrumds__item">
+                                <a href="main.html" class="breadcrumbs__item-link">Главная</a>
+                            </li>
+                            <li class="breadcrumds__item">
+                                <a href="#" class="breadcrumbs__item-link breadcrumbs__item-link--active">Отзывы</a>
+                            </li>
+                        </ul>
+                    </nav> -->
+
+                    <nav class="nav nav--horizontal">
                         <ul class="nav__list">
                             <li class="nav__item nav__item--icon--main">
                                 <a href="main.html" class="nav__link"><span>Главная</span></a>
@@ -49,19 +90,6 @@
                             </li>
                             <li class="nav__item nav__item--icon--wallet">
                                 <a href="prices.html" class="nav__link"><span>Тарифы</span></a>
-                            </li>
-                        </ul>
-                    </nav>
-                </aside>
-
-                <div class="page-content">
-                    <nav class="breadcrumbs">
-                        <ul class="breadcrumbs__list">
-                            <li class="breadcrumds__item">
-                                <a href="main.html" class="breadcrumbs__item-link">Главная</a>
-                            </li>
-                            <li class="breadcrumds__item">
-                                <a href="#" class="breadcrumbs__item-link breadcrumbs__item-link--active">Отзывы</a>
                             </li>
                         </ul>
                     </nav>
@@ -154,13 +182,13 @@
                 </div>
             </div>
 
-            <section class="discount">
+            <!-- <section class="discount">
                 <div class="container container--flex">
                     <p class="discount__text">
                         Для наших новых клиентов мы предлагаем <strong>скидку 50%</strong> на первый день! Приходите, чтобы лично оценить преимущества коворкинга «Воркадиум»!
                     </p>
                 </div>
-            </section>
+            </section> -->
 
             <section class="feedback">
                 <div class="container container--flex">
@@ -222,27 +250,6 @@
                     <a href="#" class="logo__link">
                         <img src="img/logo.png" width="99" height="51" alt="Логотип" width="99" height="51" alt="Логотип" class="logo__img">
                     </a>
-                </div>
-                <div class="socials">
-                    <span class="socials__title">Наши социальные сети</span>
-                    <ul class="socials__list">
-                        <li class="socials__item">
-                            <a href="#" class="socials__link socials__link--img--vk">
-                            </a>
-                        </li>
-                        <li class="socials__item">
-                            <a href="#" class="socials__link socials__link--img--fb">
-                            </a>
-                        </li>
-                        <li class="socials__item">
-                            <a href="#" class="socials__link socials__link--img--tw">
-                            </a>
-                        </li>
-                        <li class="socials__item">
-                            <a href="#" class="socials__link socials__link--img--mail">
-                            </a>
-                        </li>
-                    </ul>
                 </div>
             </div>
         </footer>
