modified mockup - prices.html

--- a/main.html
+++ b/main.html
@@ -59,7 +59,7 @@
                     <div class="features__item features__item--top features__item--bordered">
                         <!-- <div class="features__icon features__icon--img--flower">
                         </div> -->
-                        <span class="features__top-title">Топ-тариф</span>
+                        <h4 class="sidebar__title">Топ-тариф</h4>
                         <h3 class="features__title">Уникальность</h3>
                         <div class="features__description">
                             <p class="features__description-text">
