--- a/prices.html
+++ b/prices.html
@@ -39,7 +39,77 @@
 
             <div class="container container--flex">
                 <aside class="sidebar">
-                    <nav class="nav">
+                    <section class="partners">
+                        <h4 class="sidebar__title sidebar__title--margin--l">Партнёры</h4>
+                        <ul class="partners__group">
+                            <li class="partners__logo">
+                                <a href="#" class="partners__logo-link">
+                                    <img src="img/partners1.png" alt="Винтер Канцелярия" class="partners__logo-img">
+                                </a>
+                            </li>
+                            <li class="partners__logo">
+                                <a href="#" class="partners__logo-link"
+                                ><img src="img/partners2.png" alt="DROP" class="partners__logo-img">
+                            </a>
+                            </li>
+                            <li class="partners__logo">
+                                <a href="#" class="partners__logo-link">
+                                    <img src="img/partners3.png" alt="Библиотека Анна Ахматова" class="partners__logo-img">
+                                </a>
+                            </li>
+                            <li class="partners__logo">
+                                <a href="#" class="partners__logo-link">
+                                    <img src="img/partners4.png" alt="Тишкин" class="partners__logo-img">
+                                </a>
+                            </li>
+                            <li class="partners__logo">
+                                <a href="#" class="partners__logo-link">
+                                    <img src="img/partners5.png" alt="Пуфок" class="partners__logo-img">
+                                </a>
+                            </li>
+                            <li class="partners__logo">
+                                <a href="#" class="partners__logo-link">
+                                    <img src="img/partners6.png" alt="Авантаж" class="partners__logo-img">
+                                </a>
+                            </li>
+                        </ul>
+                    </section>
+                    <div class="socials">
+                        <span class="socials__title">Наши социальные сети</span>
+                        <ul class="socials__list">
+                            <li class="socials__item">
+                                <a href="#" class="socials__link socials__link--img--vk">
+                                </a>
+                            </li>
+                            <li class="socials__item">
+                                <a href="#" class="socials__link socials__link--img--fb">
+                                </a>
+                            </li>
+                            <li class="socials__item">
+                                <a href="#" class="socials__link socials__link--img--tw">
+                                </a>
+                            </li>
+                            <li class="socials__item">
+                                <a href="#" class="socials__link socials__link--img--mail">
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </aside>
+
+                <div class="page-content">
+                    <!-- <nav class="breadcrumbs">
+                        <ul class="breadcrumbs__list">
+                            <li class="breadcrumds__item">
+                                <a href="main.html" class="breadcrumbs__item-link">Главная</a>
+                            </li>
+                            <li class="breadcrumds__item">
+                                <a href="#" class="breadcrumbs__item-link breadcrumbs__item-link--active">Тарифы</a>
+                            </li>
+                        </ul>
+                    </nav> -->
+
+                    <nav class="nav nav--horizontal">
                         <ul class="nav__list">
                             <li class="nav__item nav__item--icon--main">
                                 <a href="main.html" class="nav__link"><span>Главная</span></a>
@@ -49,19 +119,6 @@
                             </li>
                             <li class="nav__item nav__item--icon--wallet nav__item--active">
                                 <a href="#" class="nav__link"><span>Тарифы</span></a>
-                            </li>
-                        </ul>
-                    </nav>
-                </aside>
-
-                <div class="page-content">
-                    <nav class="breadcrumbs">
-                        <ul class="breadcrumbs__list">
-                            <li class="breadcrumds__item">
-                                <a href="main.html" class="breadcrumbs__item-link">Главная</a>
-                            </li>
-                            <li class="breadcrumds__item">
-                                <a href="#" class="breadcrumbs__item-link breadcrumbs__item-link--active">Тарифы</a>
                             </li>
                         </ul>
                     </nav>
@@ -151,42 +208,6 @@
                                 </li>
                             </ul>
                         </section>
-
-                        <section class="partners">
-                            <h2 class="section-title section-title--margin--xs">Партнёры</h2>
-                            <ul class="partners__group">
-                                <li class="partners__logo">
-                                    <a href="#" class="partners__logo-link">
-                                        <img src="img/partners1.png" alt="Винтер Канцелярия" class="partners__logo-img">
-                                    </a>
-                                </li>
-                                <li class="partners__logo">
-                                    <a href="#" class="partners__logo-link"
-                                    ><img src="img/partners2.png" alt="DROP" class="partners__logo-img">
-                                </a>
-                                </li>
-                                <li class="partners__logo">
-                                    <a href="#" class="partners__logo-link">
-                                        <img src="img/partners3.png" alt="Библиотека Анна Ахматова" class="partners__logo-img">
-                                    </a>
-                                </li>
-                                <li class="partners__logo">
-                                    <a href="#" class="partners__logo-link">
-                                        <img src="img/partners4.png" alt="Тишкин" class="partners__logo-img">
-                                    </a>
-                                </li>
-                                <li class="partners__logo">
-                                    <a href="#" class="partners__logo-link">
-                                        <img src="img/partners5.png" alt="Пуфок" class="partners__logo-img">
-                                    </a>
-                                </li>
-                                <li class="partners__logo">
-                                    <a href="#" class="partners__logo-link">
-                                        <img src="img/partners6.png" alt="Авантаж" class="partners__logo-img">
-                                    </a>
-                                </li>
-                            </ul>
-                        </section>
                     </main>
                 </div>
 
@@ -206,27 +227,6 @@
                     <a href="#" class="logo__link">
                         <img src="img/logo.png" width="99" height="51" alt="Логотип" width="99" height="51" alt="Логотип" class="logo__img">
                     </a>
-                </div>
-                <div class="socials">
-                    <span class="socials__title">Наши социальные сети</span>
-                    <ul class="socials__list">
-                        <li class="socials__item">
-                            <a href="#" class="socials__link socials__link--img--vk">
-                            </a>
-                        </li>
-                        <li class="socials__item">
-                            <a href="#" class="socials__link socials__link--img--fb">
-                            </a>
-                        </li>
-                        <li class="socials__item">
-                            <a href="#" class="socials__link socials__link--img--tw">
-                            </a>
-                        </li>
-                        <li class="socials__item">
-                            <a href="#" class="socials__link socials__link--img--mail">
-                            </a>
-                        </li>
-                    </ul>
                 </div>
             </div>
         </footer>
