nav icons on main.html were changed

--- a/main.html
+++ b/main.html
@@ -21,7 +21,7 @@
                                 <img src="img/logo.png" width="99" height="51" alt="Логотип" class="logo__img">
                             </a>
                         </div>
-                        <nav class="nav nav--horizontal">
+                        <nav class="nav nav--horizontal nav--header">
                             <ul class="nav__list">
                                 <li class="nav__item nav__item--icon--main nav__item--active">
                                     <a href="#" class="nav__link"><span>Главная</span></a>
