--- a/main.html
+++ b/main.html
@@ -159,7 +159,7 @@
                                         <time>12.10.2016</time>
                                         <h3>Чёрная дыра скидок!</h3>
                                         <p>
-                                            Ключевым технологическим партнером GrowUp является дата-центр Миран, расположенный всего лишь в 500 метрах от здания, а значит, скорость интернета будет стабильной в любое время суток. Коворкинг работает в формате 24/7. Используйте шкаф для хранения личных вещей. 
+                                            Ключевым технологическим партнером GrowUp является дата-центр Миран, расположенный всего лишь в 500 метрах от здания, а значит, скорость интернета будет стабильной в любое время суток. Коворкинг работает в формате 24/7.
                                         </p>
                                     </div>
                                 </li>
