prices.html pixel perfect

--- a/prices.html
+++ b/prices.html
@@ -14,7 +14,7 @@
 <body>
     <div class="wrapper">
         <div class="wrapper__content">
-            <header class="header header--margin-buttom">
+            <header class="header header--margin-buttom--s">
                 <div class="container container--flex header__container">
                         <div class="logo">
                             <a href="#" class="logo__link">
@@ -48,6 +48,11 @@
                                 </a>
                             </li>
                             <li class="partners__logo">
+                                <a href="#" class="partners__logo-link">
+                                    <img src="img/partners4.png" alt="Тишкин" class="partners__logo-img">
+                                </a>
+                            </li>
+                            <li class="partners__logo">
                                 <a href="#" class="partners__logo-link"
                                 ><img src="img/partners2.png" alt="DROP" class="partners__logo-img">
                             </a>
@@ -55,11 +60,6 @@
                             <li class="partners__logo">
                                 <a href="#" class="partners__logo-link">
                                     <img src="img/partners3.png" alt="Библиотека Анна Ахматова" class="partners__logo-img">
-                                </a>
-                            </li>
-                            <li class="partners__logo">
-                                <a href="#" class="partners__logo-link">
-                                    <img src="img/partners4.png" alt="Тишкин" class="partners__logo-img">
                                 </a>
                             </li>
                             <li class="partners__logo">
