--- a/prices.html
+++ b/prices.html
@@ -17,7 +17,7 @@
             <header class="header header--margin-buttom--s">
                 <div class="container container--flex header__container">
                         <div class="logo">
-                            <a href="#" class="logo__link">
+                            <a href="main.html" class="logo__link">
                                 <img src="img/logo.png" width="99" height="51" alt="Логотип" class="logo__img">
                             </a>
                         </div>
@@ -132,7 +132,6 @@
                                     <div class="prices__picture">
                                         <h3 class="prices__title">«Один»</h3>
                                         <div class="prices__picture-img">
-                                            <div class="prices__picture-img-overlay"></div>
                                         </div>
                                     </div>
                                     <p class="prices__rate">
@@ -145,7 +144,6 @@
                                     <div class="prices__picture">
                                         <h3 class="prices__title">«Трое»</h3>
                                         <div class="prices__picture-img prices__picture-img--img2">
-                                            <div class="prices__picture-img-overlay"></div>
                                         </div>
                                     </div>
                                     <p class="prices__rate">
@@ -158,7 +156,6 @@
                                     <div class="prices__picture">
                                         <h3 class="prices__title">«10-10»</h3>
                                         <div class="prices__picture-img prices__picture-img--img3">
-                                            <div class="prices__picture-img-overlay"></div>
                                         </div>
                                     </div>
                                     <p class="prices__rate">
@@ -171,7 +168,6 @@
                                     <div class="prices__picture">
                                         <h3 class="prices__title"><span>Vip</span>«Безлимит на одного»</h3>
                                         <div class="prices__picture-img prices__picture-img--img4">
-                                            <div class="prices__picture-img-overlay"></div>
                                         </div>
                                     </div>
                                     <p class="prices__rate">
@@ -184,7 +180,6 @@
                                     <div class="prices__picture">
                                         <h3 class="prices__title"><span>Vip</span>«Все включено»</h3>
                                         <div class="prices__picture-img prices__picture-img--img5">
-                                            <div class="prices__picture-img-overlay"></div>
                                         </div>
                                     </div>
                                     <p class="prices__rate">
@@ -197,7 +192,6 @@
                                     <div class="prices__picture">
                                         <h3 class="prices__title">«Переговоры»</h3>
                                         <div class="prices__picture-img prices__picture-img--img6">
-                                            <div class="prices__picture-img-overlay"></div>
                                         </div>
                                     </div>
                                     <p class="prices__rate">
@@ -224,7 +218,7 @@
                     Автор работы: <strong>Прохладов Вадим</strong>
                 </p>
                 <div class="logo logo__footer">
-                    <a href="#" class="logo__link">
+                    <a href="main.html" class="logo__link">
                         <img src="img/logo.png" width="99" height="51" alt="Логотип" width="99" height="51" alt="Логотип" class="logo__img">
                     </a>
                 </div>
