--- a/reviews.html
+++ b/reviews.html
@@ -17,7 +17,7 @@
             <header class="header header--margin-buttom">
                 <div class="container container--flex header__container">
                         <div class="logo">
-                            <a href="#" class="logo__link">
+                            <a href="main.html" class="logo__link">
                                 <img src="img/logo.png" width="99" height="51" alt="Логотип" class="logo__img">
                             </a>
                         </div>
@@ -247,7 +247,7 @@
                     Автор работы: <strong>Прохладов Вадим</strong>
                 </p>
                 <div class="logo logo__footer">
-                    <a href="#" class="logo__link">
+                    <a href="main.html" class="logo__link">
                         <img src="img/logo.png" width="99" height="51" alt="Логотип" width="99" height="51" alt="Логотип" class="logo__img">
                     </a>
                 </div>
